@@ -15,7 +15,6 @@ public class ConvertListTest {
         List<int[]> in = new ArrayList<>();
         in.add(new int[]{1});
         in.add(new int[]{2, 3});
-        List<Integer> expect = Arrays.asList(1, 2, 3);
-        assertThat(ConvertList.convert(in), is(expect));
+        assertThat(ConvertList.convert(in), is(List.of(1, 2, 3)));
     }
 }
