@@ -13,12 +13,12 @@ public class NotifyAccountTest {
 
     @Test
     public void sent() {
-        List<Account> accounts = Arrays.asList(
+        List<Account> accounts = List.of(
                 new Account("123", "Petr Arsentev", "eDer3432f"),
                 new Account("142", "Petr Arsentev", "000001")
         );
         HashSet<Account> expect = new HashSet<>(
-                Arrays.asList(
+                List.of(
                         new Account("123", "Petr Arsentev", "eDer3432f"),
                         new Account("142", "Petr Arsentev", "000001")
                 )
@@ -28,13 +28,13 @@ public class NotifyAccountTest {
 
     @Test
     public void sent1() {
-        List<Account> accounts = Arrays.asList(
+        List<Account> accounts = List.of(
                 new Account("1", "Qwe", "eDer3432f"),
                 new Account("2", "Ewq", "000001"),
                 new Account("2", "Qwe", "3453453")
         );
         HashSet<Account> expect = new HashSet<>(
-                Arrays.asList(
+                List.of(
                         new Account("1", "Qwe", "eDer3432f"),
                         new Account("2", "Ewq", "000001")
                 )
@@ -44,12 +44,12 @@ public class NotifyAccountTest {
 
     @Test
     public void sent2() {
-        List<Account> accounts = Arrays.asList(
+        List<Account> accounts = List.of(
                 new Account("555", "Petr Arsentev", "eDer3432f"),
                 new Account("555", "Qwewe", "000001")
         );
         HashSet<Account> expect = new HashSet<>(
-                Arrays.asList(
+                List.of(
                         new Account("555", "Petr Arsentev", "eDer3432f")
                 )
         );
